--- a/css/main.css
+++ b/css/main.css
@@ -43,3 +43,33 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+header{
+    background-color: gray;
+    height: 100px;
+    width: 100%;
+    font-size: 80px;
+    font-style: initial;;
+}
+input{
+    position: absolute;
+	margin-left: 970px;
+	margin-top: 30px;
+	background-color: black;
+	color:cornflowerblue;
+	border-radius: 90px;
+	padding: 10px;
+}
+h1{
+	display: inline;
+}
+button{
+	position: absolute;
+	margin-left: 650px;
+	background-color: black;
+	border-radius: 90px;
+	padding: 10px;
+	margin-top: 30px;
+	color: blanchedalmond;
+}
+
+
