--- a/css/main.css
+++ b/css/main.css
@@ -170,3 +170,17 @@ a{
 	text-decoration: none;
 	color: white;
 }
+.abobusimg{
+	height: 100px;
+	width: 400px;
+	background-color: gray
+}
+.lox{
+    position: absolute;
+	margin-left: 90px;
+	background-color: black;
+	border-radius: 90px;
+	padding: 10px;
+	margin-top: 30px;
+	color: blanchedalmond;
+}
