--- a/css/main.css
+++ b/css/main.css
@@ -186,3 +186,12 @@ a{
 	margin-top: 30px;
 	color: blanchedalmond;
 }
+.lox_recurtion{
+	position: absolute;
+	margin-left: 410px;
+	background-color: black;
+	border-radius: 90px;
+	padding: 10px;
+	margin-top: 30px;
+	color: blanchedalmond
+}
